Change to looks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Courses Web Services App</string>
+    <string name="app_name">UPark</string>
     <string name="title_item_detail">Item Detail</string>
 
     <!-- TODO: Remove or change this placeholder text -->
