--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="btn_register">Register</string>
     <string name="facebook_app_id">975873809517235</string>
     <string name="fb_login_protocol_scheme">fb975873809517235</string>
+    <string name="google_maps_api_key">AIzaSyA6IaTZI-k_nNG0tso3WpEhohMpN8MPVVI</string>
 
 
 </resources>
