--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="fb_login_protocol_scheme">fb975873809517235</string>
     <string name="google_maps_api_key">AIzaSyA6IaTZI-k_nNG0tso3WpEhohMpN8MPVVI</string>
 
-    <string name="dialog_title">Your request has been sent!</string>
+    <string name="dialog_title">We appreciate your input!</string>
 
 
 </resources>
